--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
    <li>codding</li>
    <li>Listening Music</li>
    <li>Cooking</li>
-  <p>  <a href="Contact.html">For Contact</a></p>
+  <p>  <a href="contact.html">For Contact</a></p>
 
 </body>
 
